kustomize_envs/base/ingress/ingress.gd_ingest.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gd-ingest
  labels:
    app: gd-ingest
    type: ingress
spec:
  rules:
    - host: gd-ingest.mycompany.com
      http:
        paths:
          - path: /
            backend:
              serviceName: gd-ingest
              servicePort: 80
  tls:
  - hosts:
    - gd-ingest.mycompany.com
    secretName: gd-tls-cert
