kustomize_envs/base/ingress/ingress.gd_revoker.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gd-revoker
  labels:
    app: gd-revoker
    type: ingress
spec:
  rules:
  - host: gd-revoker.mycompany.com
    http:
      paths:
      - path: /
        backend:
          serviceName: gd-revoker
          servicePort: 80
  tls:
  - hosts:
    - gd-revoker.mycompany.com
    secretName: gd-tls-revoker-chained-cert
